# soldera

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml
core/: apps.py  lib.py  views.py
react/: index.html  tsconfig.json  vite.config.ts
react/src/: App.css  App.hooks.ts  App.tsx  AuctionCharts.tsx  index.css  types.ts
soldera/: api.py  models.py  scraper.py  serializers.py  tasks.py  types.py  urls.py  views.py  wsgi.py
soldera/management/commands/: populate_auctions_from_json.py
soldera/migrations/: 0001_initial.py
soldera/settings/: _settings.example.py  _settings_prod.example.py
varia/: container-requirements.txt  migration-data.json  nginx.conf  supervisor_event_listener.py  supervisord.conf  uwsgi.ini
